include basic intro animation

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,23 @@
 body {
+  background-color: #37312d;
   text-align: center; }
+  body header .owl-carousel.home .owl-item div {
+    background-size: cover;
+    background-position: center;
+    color: transparent;
+    height: 80vh; }
+    body header .owl-carousel.home .owl-item div.slide-1 {
+      background-image: url("../img/home-1.jpg"); }
+    body header .owl-carousel.home .owl-item div.slide-2 {
+      background-image: url("../img/home-2.jpg"); }
+    body header .owl-carousel.home .owl-item div.slide-3 {
+      background-image: url("../img/home-3.jpg"); }
+    body header .owl-carousel.home .owl-item div.slide-4 {
+      background-image: url("../img/home-4.jpg"); }
+    body header .owl-carousel.home .owl-item div.slide-5 {
+      background-image: url("../img/home-5.jpg"); }
+    body header .owl-carousel.home .owl-item div.slide-6 {
+      background-image: url("../img/home-6.jpg"); }
 
 @font-face {
   font-family: 'helvetica-light';
