--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,23 +1,116 @@
 body {
-  background-color: #37312d;
-  text-align: center; }
-  body header .owl-carousel.home .owl-item div {
-    background-size: cover;
-    background-position: center;
-    color: transparent;
-    height: 80vh; }
-    body header .owl-carousel.home .owl-item div.slide-1 {
-      background-image: url("../img/home-1.jpg"); }
-    body header .owl-carousel.home .owl-item div.slide-2 {
-      background-image: url("../img/home-2.jpg"); }
-    body header .owl-carousel.home .owl-item div.slide-3 {
-      background-image: url("../img/home-3.jpg"); }
-    body header .owl-carousel.home .owl-item div.slide-4 {
-      background-image: url("../img/home-4.jpg"); }
-    body header .owl-carousel.home .owl-item div.slide-5 {
-      background-image: url("../img/home-5.jpg"); }
-    body header .owl-carousel.home .owl-item div.slide-6 {
-      background-image: url("../img/home-6.jpg"); }
+  background-color: #37312d; }
+  body nav {
+    align-items: center;
+    display: flex;
+    height: 80px;
+    left: 0;
+    padding: 0 5%;
+    position: absolute;
+    right: 0;
+    z-index: 1; }
+    body nav:before {
+      background: linear-gradient(to bottom, rgba(4, 2, 2, 0.85) 0%, rgba(4, 2, 2, 0) 100%);
+      content: '';
+      height: 150px;
+      left: 0;
+      position: absolute;
+      width: 100%;
+      z-index: -1; }
+    body nav .logo {
+      display: flex; }
+      body nav .logo .icon {
+        height: 23px;
+        position: relative;
+        width: 23px; }
+        body nav .logo .icon .bar {
+          background-color: #fff;
+          bottom: 0;
+          height: 2px;
+          position: absolute;
+          right: 0;
+          transform-origin: 100% 100%;
+          width: 100%; }
+          body nav .logo .icon .bar:nth-of-type(1) {
+            opacity: 0.4; }
+          body nav .logo .icon .bar:nth-of-type(2) {
+            opacity: 0.6;
+            transform: rotate(30deg); }
+          body nav .logo .icon .bar:nth-of-type(3) {
+            opacity: 0.8;
+            transform: rotate(60deg); }
+          body nav .logo .icon .bar:nth-of-type(4) {
+            opacity: 0.9;
+            transform: rotate(90deg); }
+        body nav .logo .icon.animate .bar {
+          /* only animate when animate class is applies */ }
+          body nav .logo .icon.animate .bar:nth-of-type(1) {
+            animation: 1s ease-in-out anim-bar-1; }
+          body nav .logo .icon.animate .bar:nth-of-type(2) {
+            animation: 1s ease-in-out anim-bar-2; }
+          body nav .logo .icon.animate .bar:nth-of-type(3) {
+            animation: 1s ease-in-out anim-bar-3; }
+          body nav .logo .icon.animate .bar:nth-of-type(4) {
+            animation: 1s ease-in-out anim-bar-4; }
+
+@keyframes anim-bar-1 {
+  0% {
+    opacity: 0; }
+  25% {
+    opacity: 0.4; } }
+
+@keyframes anim-bar-2 {
+  0% {
+    opacity: 0; }
+  25% {
+    opacity: 0; }
+  50% {
+    opacity: 0.6; } }
+
+@keyframes anim-bar-3 {
+  0% {
+    opacity: 0; }
+  50% {
+    opacity: 0; }
+  75% {
+    opacity: 0.8; } }
+
+@keyframes anim-bar-4 {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(90deg); } }
+      body nav .logo img {
+        height: 23px;
+        padding-left: 6px; }
+  body header {
+    position: relative;
+    z-index: 0; }
+    body header .owl-carousel.home .owl-item div {
+      background-size: cover;
+      background-position: center;
+      color: transparent;
+      height: 80vh; }
+      body header .owl-carousel.home .owl-item div.slide-1 {
+        background-image: url("../img/home-1.jpg"); }
+      body header .owl-carousel.home .owl-item div.slide-2 {
+        background-image: url("../img/home-2.jpg"); }
+      body header .owl-carousel.home .owl-item div.slide-3 {
+        background-image: url("../img/home-3.jpg"); }
+      body header .owl-carousel.home .owl-item div.slide-4 {
+        background-image: url("../img/home-4.jpg"); }
+      body header .owl-carousel.home .owl-item div.slide-5 {
+        background-image: url("../img/home-5.jpg"); }
+      body header .owl-carousel.home .owl-item div.slide-6 {
+        background-image: url("../img/home-6.jpg"); }
+      body header .owl-carousel.home .owl-item div.slide-7 {
+        background-image: url("../img/home-7.jpg"); }
+      body header .owl-carousel.home .owl-item div.slide-8 {
+        background-image: url("../img/home-8.jpg"); }
+      body header .owl-carousel.home .owl-item div.slide-9 {
+        background-image: url("../img/home-9.jpg"); }
+      body header .owl-carousel.home .owl-item div.slide-10 {
+        background-image: url("../img/home-10.jpg"); }
 
 @font-face {
   font-family: 'helvetica-light';
