--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -1,8 +1,74 @@
 body {
     background-color: #37312d;
-    text-align: center;
+
+    nav {
+        align-items: center;
+        display: flex;
+        height: 80px;
+        left: 0;
+        padding: 0 5%;
+        position: absolute;
+        right: 0;
+        z-index: 1;
+
+        &:before {
+            background: linear-gradient(to bottom, rgba(4,2,2,0.85) 0%,rgba(4,2,2,0) 100%);
+            content: '';
+            height: 150px;
+            left: 0;
+            position: absolute;
+            width: 100%;
+            z-index: -1;
+        }
+        .logo {
+            display: flex;
+            $height: 23px;
+
+            .icon {
+                height: $height;
+                position: relative;
+                width: $height;
+
+                .bar {
+                    background-color: #fff;
+                    bottom: 0;
+                    height: 2px;
+                    position: absolute;
+                    right: 0;
+                    transform-origin: 100% 100%;
+                    width: 100%;
+
+                    &:nth-of-type(1) { opacity: 0.4; }
+                    &:nth-of-type(2) { opacity: 0.6; transform: rotate(30deg); }
+                    &:nth-of-type(3) { opacity: 0.8; transform: rotate(60deg); }
+                    &:nth-of-type(4) { opacity: 0.9; transform: rotate(90deg); }
+                }
+                &.animate {
+                    .bar {
+                        $time: 1s;
+                        &:nth-of-type(1) { animation: $time ease-in-out anim-bar-1; }
+                        &:nth-of-type(2) { animation: $time ease-in-out anim-bar-2; }
+                        &:nth-of-type(3) { animation: $time ease-in-out anim-bar-3; }
+                        &:nth-of-type(4) { animation: $time ease-in-out anim-bar-4; }
+                        /* only animate when animate class is applies */
+                        @keyframes anim-bar-1 { 0% { opacity: 0; } 25% { opacity: 0.4; } }
+                        @keyframes anim-bar-2 { 0% { opacity: 0; } 25% { opacity: 0; } 50% { opacity: 0.6; } }
+                        @keyframes anim-bar-3 { 0% { opacity: 0; } 50% { opacity: 0; } 75% { opacity: 0.8; } }
+                        @keyframes anim-bar-4 { 0% { transform: rotate(0deg); } 100% { transform: rotate(90deg); } }
+                    }
+                }
+            }
+            img {
+                height: $height;
+                padding-left: 6px;
+            }
+        }
+    }
 
     header {
+        position: relative;
+        z-index: 0;
+
         .owl-carousel {
             &.home {
                 .owl-item {
@@ -18,6 +84,10 @@ body {
                         &.slide-4 { background-image: url('../img/home-4.jpg'); }
                         &.slide-5 { background-image: url('../img/home-5.jpg'); }
                         &.slide-6 { background-image: url('../img/home-6.jpg'); }
+                        &.slide-7 { background-image: url('../img/home-7.jpg'); }
+                        &.slide-8 { background-image: url('../img/home-8.jpg'); }
+                        &.slide-9 { background-image: url('../img/home-9.jpg'); }
+                        &.slide-10 { background-image: url('../img/home-10.jpg'); }
                     }
                 }
             }
