--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -64,6 +64,14 @@ body {
                 padding-left: 6px;
             }
         }
+        #toggle-menu {
+            display: none; /* default hidden */
+            opacity: 0.8;
+            position: absolute;
+            right: 24px;
+            top: 32px;
+            width: 30px;
+        }
         ul {
             color: #fff;
             display: flex;
@@ -97,7 +105,8 @@ body {
                         background-size: cover;
                         background-position: center;
                         color: transparent;
-                        height: calc(100vh - 192px);
+                        height: calc(100vh - 180px);
+                        min-height: 480px;
 
                         &.slide-1 { background-image: url('../img/home/home-1.jpg'); }
                         &.slide-2 { background-image: url('../img/home/home-2.jpg'); }
@@ -112,6 +121,15 @@ body {
                     }
                 }
             }
+        }
+        h2 {
+            color: #37312d;
+            font-size: 2vw;
+            left: 20%;
+            max-width: 15%;
+            position: absolute;
+            top: 20%;
+            z-index: 1;
         }
     }
 
@@ -156,15 +174,133 @@ body {
                             text-transform: uppercase;
                         }
                     }
+
+                    .owl-nav {
+                        position: absolute;
+                        top: calc(50% - 36px);
+                        width: 100%;
+
+                        button {
+                            color: transparent;
+                            height: 48px;
+                            opacity: 0.8;
+                            position: absolute;
+                            width: 16px;
+
+                            &.owl-prev { left: 12px; background-image: url('../img/left-arrow.svg'); }
+                            &.owl-next { right: 12px; background-image: url('../img/right-arrow.svg'); }
+                        }
+                    }
                 }
             }
+            .cta {
+                padding: 32px 0 80px;
+            }
+        }
+    }
+
+    footer {
+        color: #fff;
+        text-align: center;
+        padding: 0 0 240px;
+
+        .links {
+            border-top: 1px solid #878381;
+            display: inline-block;
+
+            .logo {
+                $height: 23px;
+                display: inline-block;
+                padding: 64px 0;
+    
+                img { height: $height; }
+            }
+            ul {
+                display: flex;
+                justify-content: center;
+                list-style: none;
+                margin: 0 0 0 auto;
+                padding: 0;
+    
+                li {
+                    border-right: 1px solid #fff;
+                    padding: 0 16px;
+    
+                    &:last-of-type { border: none; }
+    
+                    a {
+                        color: inherit;
+                        font-size: 15px;
+                        text-decoration: none;
+                    }
+                }
+            }
+            p { font-size: 12px; }
+        }
+    }
+
+    .btn {
+        background-color: #55504c;
+        border-radius: 999px;
+        color: #fff;
+        display: inline-block;
+        font-size: 18px;
+        padding: 18px 24px;
+        text-decoration: none;
+        transition: all 0.25s ease-in-out;
+
+        &:hover, &:focus {
+            box-shadow: 0 0 16px #1d1a18;
+            color: #1d1a18;
         }
     }
 }
 
 
 @media(max-width:800px){ 
-    
+    body {
+        nav {
+            #toggle-menu { display: block; }
+            ul {
+                right: 0;
+                padding: 6px 0;
+                position: absolute;
+                text-align: right;
+                top: 80px;
+
+                &[aria-expanded="false"] { display: none; }
+                &[aria-expanded="true"] { display: block; }
+
+                li { 
+                    border: none;
+                    padding: 0;
+
+                    a { 
+                        background-color: #55504c;
+                        border-top-left-radius: 999px;
+                        border-bottom-left-radius: 999px;
+                        display: block;
+                        margin-bottom: 12px;
+                        padding: 12px 12px 12px 32px;
+                        transition: all 0.25s ease-in-out;
+
+                        &:hover, &:focus {
+                            box-shadow: 0 0 16px #1d1a18;
+                            color: #1d1a18;
+                        }
+                    }
+                }
+            }
+        }
+
+        header {
+            h2 {
+                font-size: 18px;
+                left: 5%;
+                max-width: 30%;
+            }
+        }
+    }
 }
 
 @font-face {
