update texture data

--- a/css/textures.css
+++ b/css/textures.css
@@ -242,8 +242,8 @@
 .doeskin-headboard {
   background-image: url("../img/textures/headboards/doeskin.jpg"); }
 
-.Lilac-headboard {
-  background-image: url("../img/textures/headboards/Lilac.jpg"); }
+.lilac-headboard {
+  background-image: url("../img/textures/headboards/lilac.jpg"); }
 
 .pumpkin-headboard {
   background-image: url("../img/textures/headboards/pumpkin.jpg"); }
