--- a/includes/create-content.html
+++ b/includes/create-content.html
@@ -1,7 +1,7 @@
 <article class="create">
     <div class="row">
         <div class="col-6">
-            <h1 id="title">Title</h1>
+            <h1 id="scheme-title">Title</h1>
         </div>
         <div class="col-6">
             <p id="description">Description about this texture scheme.</p>
@@ -11,17 +11,45 @@
         <div class="col-6">
             <div class="palette">
                 <div class="grid">
-                    <div id="panel-a" class=""></div>
-                    <div id="panel-b" class=""></div>
-                    <div id="couch" class=""></div>
-                    <div id="cabinet" class=""></div>
-                    <div id="headboard" class=""></div>
+                    <div id="panel-a">
+                        <div class="caption">
+                            <span class="label">panel a</span>
+                            <span class="title">Serengeti</span>
+                        </div>
+                    </div>
+                    <div id="panel-b">
+                        <div class="caption">
+                            <span class="label">panel b</span>
+                            <span class="title">Sunset Brown</span>
+                        </div>
+                    </div>
+                    <div id="couch">
+                        <div class="caption">
+                            <span class="label">couch</span>
+                            <span class="title">Saddle</span>
+                        </div>
+                    </div>
+                    <div id="cabinet">
+                        <div class="caption">
+                            <span class="label">cabinet interior</span>
+                            <span class="title">Mahogany</span>
+                        </div>
+                    </div>
+                    <div id="headboard">
+                        <div class="caption">
+                            <span class="label">headboard</span>
+                            <span class="title">Camel</span>
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div class="email">
+                <a id="email-scheme" href="#" class="btn">Email me this color scheme</a>
             </div>
         </div>
         <div class="col-6">
-            <a id="edit-customize-scheme" href="#" class="btn">Customize this color scheme</a>
-            <a id="email-scheme" href="#" class="btn">Email me this color scheme</a>
+            <a id="customize-scheme" href="#" class="btn"><span class="icon"></span> Customize this color scheme</a>
+            <a id="email-scheme" href="#" class="btn"><span class="icon"></span> Email me this color scheme</a>
         </div>
     </div>
 </article>
