--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -53,36 +53,36 @@ body {
       body nav .logo.animate {
         /* only animate when animate class is applies */ }
         body nav .logo.animate .bar:nth-of-type(1) {
-          animation: 2s ease-in-out anim-bar-1; }
+          animation: 1s ease-in anim-bar-1; }
         body nav .logo.animate .bar:nth-of-type(2) {
-          animation: 2s ease-in-out anim-bar-2; }
+          animation: 1s ease-in anim-bar-2; }
         body nav .logo.animate .bar:nth-of-type(3) {
-          animation: 2s ease-in-out anim-bar-3; }
+          animation: 1s ease-in anim-bar-3; }
         body nav .logo.animate .bar:nth-of-type(4) {
-          animation: 2s ease-in-out anim-bar-4; }
+          animation: 1s ease-in anim-bar-4; }
         body nav .logo.animate .text {
-          animation: 3s ease-out anim-text; }
+          animation: 1.5s ease-out anim-text; }
 
 @keyframes anim-bar-1 {
   0% {
     opacity: 0; }
-  25% {
+  35% {
     opacity: 0.4; } }
 
 @keyframes anim-bar-2 {
   0% {
     opacity: 0; }
-  30% {
+  45% {
     opacity: 0; }
-  50% {
+  55% {
     opacity: 0.6; } }
 
 @keyframes anim-bar-3 {
   0% {
     opacity: 0; }
-  55% {
-    opacity: 0; }
   75% {
+    opacity: 0; }
+  85% {
     opacity: 0.8; } }
 
 @keyframes anim-bar-4 {
@@ -94,7 +94,7 @@ body {
 @keyframes anim-text {
   0% {
     width: 0; }
-  50% {
+  60% {
     width: 0; }
   100% {
     width: 138px; } }
@@ -218,27 +218,33 @@ body {
       padding: 32px 0 80px; }
   body article.create {
     color: #ffffff;
-    padding-top: 96px; }
+    margin: 0 auto;
+    max-width: 1200px;
+    padding: 96px 0 270px; }
     body article.create h1 {
       font-size: 44px;
       font-weight: normal;
       margin: 0; }
     body article.create .palette {
-      height: 100%;
+      font-family: 'Roboto Condensed', sans-serif;
+      font-weight: 300;
       padding-bottom: 110%;
-      /* ratio */
+      /* grid ratio */
       position: relative;
       width: 100%; }
       body article.create .palette .grid {
         background-color: #55504c;
         display: -ms-grid;
         display: grid;
-        height: 100%;
         -ms-grid-columns: 2fr 1fr;
         -ms-grid-rows: 2fr 1fr 1fr;
         grid-template-columns: 2fr 1fr;
         grid-template-rows: 2fr 1fr 1fr;
+        height: 100%;
+        position: absolute;
         width: 100%; }
+        body article.create .palette .grid > div {
+          position: relative; }
         body article.create .palette .grid #panel-a {
           grid-column: 1 / 2;
           grid-row: 1 / 1; }
@@ -254,6 +260,19 @@ body {
         body article.create .palette .grid #headboard {
           grid-column: 2 / 3;
           grid-row: 3 / 4; }
+        body article.create .palette .grid .caption {
+          bottom: 8px;
+          font-size: 16px;
+          left: 8px;
+          position: absolute; }
+          body article.create .palette .grid .caption .label {
+            text-transform: uppercase;
+            display: block; }
+          body article.create .palette .grid .caption .title {
+            display: block; }
+    body article.create .email {
+      padding: 36px 0;
+      text-align: center; }
   body footer {
     color: #fff;
     text-align: center;
@@ -288,7 +307,7 @@ body {
     flex-wrap: wrap; }
     body .row [class*="col-"] {
       box-sizing: border-box;
-      padding: 0 12px; }
+      padding: 0 40px; }
     body .row .col-1 {
       width: 8.33333%; }
     body .row .col-2 {
@@ -316,6 +335,7 @@ body {
   body .btn {
     background-color: #55504c;
     border-radius: 999px;
+    box-sizing: border-box;
     color: #fff;
     display: inline-block;
     font-size: 18px;
@@ -325,6 +345,29 @@ body {
     body .btn:hover, body .btn:focus {
       box-shadow: 0 0 8px #1d1a18;
       color: #1d1a18; }
+    body .btn#customize-scheme {
+      background-color: #433d39;
+      border-radius: 0;
+      line-height: 30px;
+      padding: 20px 0;
+      margin-bottom: 24px;
+      text-align: center;
+      width: 100%; }
+      body .btn#customize-scheme .icon {
+        background-image: url("../img/color-icon.png"); }
+    body .btn#email-scheme {
+      line-height: 30px;
+      text-align: center;
+      width: 100%; }
+      body .btn#email-scheme .icon {
+        background-image: url("../img/send-icon.png"); }
+    body .btn .icon {
+      background-image: url("");
+      content: '';
+      display: inline-block;
+      height: 30px;
+      vertical-align: top;
+      width: 30px; }
 
 @media (max-width: 980px) {
   body nav #toggle-menu {
