--- a/css/textures.css
+++ b/css/textures.css
@@ -490,8 +490,8 @@
 .charcoal-cabinet {
   background-image: url("../img/textures/cabinets/charcoal.jpg"); }
 
-.italien-walnut-cabinet {
-  background-image: url("../img/textures/cabinets/italien-walnut.jpg"); }
+.italian-walnut-cabinet {
+  background-image: url("../img/textures/cabinets/italian-walnut.jpg"); }
 
 .wilsonart-designer-white-cabinet {
   background-image: url("../img/textures/cabinets/wilsonart-designer-white.jpg"); }
@@ -511,8 +511,8 @@
 .natural-maple-cabinet {
   background-image: url("../img/textures/cabinets/natural-maple.jpg"); }
 
-.clacier-white-cabinet {
-  background-image: url("../img/textures/cabinets/clacier-white.jpg"); }
+.glacier-white-cabinet {
+  background-image: url("../img/textures/cabinets/glacier-white.jpg"); }
 
 .norwegian-cabinet {
   background-image: url("../img/textures/cabinets/norwegian.jpg"); }
