--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -106,6 +106,15 @@ body {
       right: 24px;
       top: 32px;
       width: 30px; }
+      body nav #toggle-menu[aria-expanded="true"]:before {
+        background-color: rgba(0, 0, 0, 0.75);
+        bottom: 0;
+        content: '';
+        left: 0;
+        position: fixed;
+        right: 0;
+        top: 0;
+        z-index: -1; }
     body nav ul {
       color: #fff;
       display: flex;
