update carousel links

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -3,9 +3,9 @@
         <img src="img/logo.svg" />
     </a>
     <ul>
-        <li><a href="solutions.html">The Solution</a></li>
-        <li><a href="solutions.html">Color Schemes</a></li>
-        <li><a href="solutions.html">Contact Us</a></li>
+        <li><a href="solution.html">The Solution</a></li>
+        <li><a href="schemes.html">Color Schemes</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
     </ul>
     <p>Copyright <span class="currentYear">2018</span>, Sonnovita, Scottsdale, AZ. All rights reserved.</p>
 </div>
