--- a/includes/nav.html
+++ b/includes/nav.html
@@ -1,4 +1,4 @@
-<a class="logo">
+<a class="logo" href="index.html">
     <div class="icon">
         <div class="bar"></div>
         <div class="bar"></div>
@@ -13,7 +13,7 @@
     <img alt="menu icon" src="img/menu-icon.svg">
 </a>
 <ul id="main-nav" aria-expanded="false" role="navigation" aria-label="main nav">
-    <li><a href="solutions.html">The Solution</a></li>
-    <li><a href="solutions.html">Color Schemes</a></li>
-    <li><a href="solutions.html">Contact Us</a></li>
+    <li><a href="solution.html">The Solution</a></li>
+    <li><a href="schemes.html">Color Schemes</a></li>
+    <li><a href="contact.html">Contact Us</a></li>
 </ul>
