--- a/includes/page-home.html
+++ b/includes/page-home.html
@@ -55,9 +55,14 @@
                     <span class="category">Cabinet Interior</span>
                 </div>
                 <div class="item">
-                    <div class="tile texture mica-headboard"><span class="name">Mica</span></div>
+                    <div class="tile texture camel-headboard"><span class="name">Camel</span></div>
                     <span class="category">Headboard</span>
                 </div>
+            </div>
+            <div class="cta">
+                <a class="btn" href="index.html?create&panel-a=serengeti&panel-b=sunset-brown&couch=saddle&cabinet=mahogany&headboard=camel">
+                    create your own color scheme
+                </a>
             </div>
         </div>
         <div class="group">
@@ -87,6 +92,11 @@
                     <span class="category">Headboard</span>
                 </div>
             </div>
+            <div class="cta">
+                <a class="btn" href="index.html?create&panel-a=black-hole&panel-b=carbon&couch=chocolate&cabinet=charcoal&headboard=aubergine">
+                    create your own color scheme
+                </a>
+            </div>
         </div>
         <div class="group">
             <div class="headline">
@@ -115,9 +125,11 @@
                     <span class="category">Headboard</span>
                 </div>
             </div>
+            <div class="cta">
+                <a class="btn" href="index.html?create&panel-a=graphite-reign&panel-b=carbon-black&couch=slate&cabinet=charcoal&headboard=ultraviolet">
+                    create your own color scheme
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="cta">
-        <a class="btn" href="create.html">create your own color scheme</a>
     </div>
 </article>
