update logo animation

--- a/includes/page-home.html
+++ b/includes/page-home.html
@@ -59,11 +59,6 @@
                     <span class="category">Headboard</span>
                 </div>
             </div>
-            <div class="cta">
-                <a class="btn" href="index.html?create&panel-a=serengeti&panel-b=sunset-brown&couch=saddle&cabinet=mahogany&headboard=camel">
-                    create your own color scheme
-                </a>
-            </div>
         </div>
         <div class="group">
             <div class="headline">
@@ -91,11 +86,6 @@
                     <div class="tile texture aubergine-headboard"><span class="name">Aubergine</span></div>
                     <span class="category">Headboard</span>
                 </div>
-            </div>
-            <div class="cta">
-                <a class="btn" href="index.html?create&panel-a=black-hole&panel-b=carbon&couch=chocolate&cabinet=charcoal&headboard=aubergine">
-                    create your own color scheme
-                </a>
             </div>
         </div>
         <div class="group">
@@ -125,11 +115,11 @@
                     <span class="category">Headboard</span>
                 </div>
             </div>
-            <div class="cta">
-                <a class="btn" href="index.html?create&panel-a=graphite-reign&panel-b=carbon-black&couch=slate&cabinet=charcoal&headboard=ultraviolet">
-                    create your own color scheme
-                </a>
-            </div>
         </div>
+    </div>
+    <div class="cta">
+        <a class="btn" href="schemes.html">
+            create your own color scheme
+        </a>
     </div>
 </article>
