--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -230,7 +230,7 @@ body {
             color: #ffffff;
             margin: 0 auto;
             max-width: 1200px;
-            padding: 96px 0 270px;
+            padding: 96px 0;
 
             h1 { 
                 font-size: 44px;
@@ -278,6 +278,18 @@ body {
             .email {
                 padding: 36px 0;
                 text-align: center;
+            }
+        }
+        &.schemes {
+            color: #ffffff;
+            margin: 0 auto;
+            max-width: 1200px;
+            padding: 96px 0;
+
+            h1 { 
+                font-size: 44px;
+                font-weight: normal;
+                margin: 0;
             }
         }
     }
